--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    
+    <form>
+        <input type="text"><input>
+        <button>Login</button>
+    </form>
 </body>
 </html>
