--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <form>
-        <input type="text"><input>
+        <input type="text"></input>
         <button>Login</button>
     </form>
 </body>
