--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <form>
+    <form onLoad="form()" id="form" class="form">
         <input type="text"></input>
         <button>Login</button>
     </form>
